--- a/doc/riferimenti.bib
+++ b/doc/riferimenti.bib
@@ -3,7 +3,7 @@
   title       = {Implementazione parallela di un algoritmo di proiezione tomografica},
   type        = {Tesi di laurea triennale},
   institution = {Ingegneria e Scienze Informatiche, Università di Bologna, Cesena},
-  year        = {2024/2025},
+  year        = {2024},
 }
 
 @Inbook{MoroLoli2021,
